@@ -3,6 +3,8 @@ Version 1.7.2+svn:
     * New unit graphics and animations for the Troll Hero.
  * Language and i18n:
    * Updated translations: Dutch, French
+ * WML Engine:
+   * return 0 for length of arrays inside nonexistent containers (bug #13734)
  * Miscellaneous and bugfixes:
    * 'Recruit' and 'recall' don't appear in context menus unless the
      leader is on a keep. (bug #13856 and #13855)
